Preenchido card com conteudo. Finalizado marcado de novo no canto do card

--- a/index.html
+++ b/index.html
@@ -11,7 +11,33 @@
   <body>
     <div class="container">
       <div class="card">
-        <img src="img/card_image.png" />
+        <div class="card-image">
+          <img src="img/card_image.png" />
+        </div>
+        <div class="card-new-marker">
+          <p>NEW</p>
+        </div>
+        <div class="card-container">
+          <div class="card-header">
+            <h1>BetBright Casino</h1>
+            <h2>£1000 Bonus</h2>
+          </div>
+          <div class="card-content">
+            <section>
+              <h1>Join</h1>
+              <p>Open an account with us, it takes just a few minutes</p>
+            </section>
+            <section>
+              <h1>Deposit</h1>
+              <p>Place a single bet up to £30 on any sport in our Sportsbook</p>
+            </section>
+          </div>
+          <div class="card-footer">
+            <button class="card-button">Ts&Cs</button>
+            <button class="card-button">Find Out More</button>
+            <button class="card-button primary">Join Now</button>
+          </div>
+        </div>
       </div>
     </div>
   </body>
