Adicionado marcador de novo como foto. Inserida fonte roboto. Ajustado layout para parecer mais com a proposta

--- a/index.html
+++ b/index.html
@@ -6,7 +6,11 @@
     <meta name="description" content="888 Spectate Frontend Test" />
     <meta name="author" content="Caio Rios" />
     <title>888 Spectate - Flip Card</title>
-    <link href="css/site.css" rel="stylesheet" />
+    <link
+      href="https://fonts.googleapis.com/css?family=Roboto&display=swap"
+      rel="stylesheet"
+    />
+    <link href="css/index.css" rel="stylesheet" />
   </head>
   <body>
     <div class="container">
@@ -14,8 +18,8 @@
         <div class="card-image">
           <img src="img/card_image.png" />
         </div>
-        <div class="card-new-marker">
-          <p>NEW</p>
+        <div class="card-marker">
+          <img src="img/card_new_marker.png" />
         </div>
         <div class="card-container">
           <div class="card-header">
@@ -34,8 +38,8 @@
           </div>
           <div class="card-footer">
             <button class="card-button">Ts&Cs</button>
-            <button class="card-button">Find Out More</button>
-            <button class="card-button primary">Join Now</button>
+            <button class="card-button">FIND OUT MORE</button>
+            <button class="card-button primary">JOIN NOW</button>
           </div>
         </div>
       </div>
