--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
       href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"
       rel="stylesheet"
     />
-    <link href="css/index.css" rel="stylesheet" />
+    <link href="css/globals.css" rel="stylesheet" />
+    <link href="css/helpers.css" rel="stylesheet" />
+    <link href="css/card.css" rel="stylesheet" />
     <script type="text/javascript" src="js/actions.js"></script>
   </head>
   <body>
