Aplicada responsividade ao card

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <div id="card-inner" class="card-inner">
           <div class="card-front new-marker flex">
             <div class="card-image">
-              <img src="img/card_image.png" />
+              <img src="img/card_image.png" width="255" height="210" />
             </div>
             <div class="card-container">
               <div class="card-header">
