Quase finalizado layout do back do card

--- a/index.html
+++ b/index.html
@@ -20,14 +20,14 @@
     <div class="container">
       <div id="card" class="card">
         <div id="card-inner" class="card-inner">
-          <div class="card-front new-marker flex">
+          <!-- <div class="card-front new-marker flex">
             <div class="card-image">
               <img src="img/card_image.png" width="255" height="210" />
             </div>
             <div class="card-container">
               <div class="card-header">
-                <h1>BetBright Casino</h1>
-                <h2>£1000 Bonus</h2>
+                <h3>BetBright Casino</h3>
+                <h1>£1000 Bonus</h1>
               </div>
               <div class="card-content">
                 <section>
@@ -49,12 +49,60 @@
                 <button class="card-button full primary">JOIN NOW</button>
               </div>
             </div>
-          </div>
+          </div> -->
 
-          <div class="card-back flex">
+          <div class="card-front flex">
             <div class="card-container">
               <div class="card-header">
-                <h1>Casino Bonus</h1>
+                <h2>Casino Bonus</h2>
+              </div>
+              <div class="card-content scrollable">
+                <section>
+                  <h1>Terms & Conditions</h1>
+                  <p>
+                    Offer only available to new customers who come through
+                    related online promotional material. 18s+. Place a bet up to
+                    the value of what you deposit and up to a max value of £30.
+                    Only first placed bet qualifies. Single and Multiple bets
+                    qualify. If qualifying bet loses, the amount staked up to
+                    max £30 will be refunded. Qualifying bet must be placed
+                    within 14 days of requesting the money back special and bet
+                    must settle within 21 days of being placed.
+                  </p>
+                  <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                    Fusce consectetur est in odio varius, sed tincidunt odio
+                    euismod. Proin a risus scelerisque, interdum lorem ut,
+                    blandit neque. Donec facilisis a odio nec ornare. Maecenas
+                    sit amet diam est. Suspendisse vel magna ac metus malesuada
+                    auctor ut ut nunc. Morbi lobortis dapibus dui, nec
+                    ullamcorper velit accumsan eget. Phasellus ut neque orci.
+                  </p>
+                  <p>
+                    Vivamus tincidunt et ex sed tempor. Integer ac ante sodales,
+                    dictum mi ac, aliquet leo. Integer viverra est blandit
+                    dapibus congue. Pellentesque semper interdum tellus vitae
+                    consequat. Ut scelerisque, eros nec mollis sagittis, magna
+                    neque bibendum elit, eu mollis sem est sit amet urna.
+                    Suspendisse vestibulum eu dolor sed suscipit. Aenean euismod
+                    enim sit amet felis vulputate blandit. Maecenas auctor, nisl
+                    in fermentum suscipit, ligula risus laoreet risus, eget
+                    ultrices urna mauris in urna. In feugiat efficitur mi ac
+                    faucibus. Nam tristique tellus orci. Fusce ut luctus lacus,
+                    at facilisis sapien. Aliquam erat volutpat.
+                  </p>
+                  <p>
+                    Integer laoreet turpis ut odio placerat blandit. Donec et
+                    accumsan magna, ac laoreet urna. Lorem ipsum dolor sit amet,
+                    consectetur adipiscing elit. Nullam mi lorem, condimentum
+                    suscipit turpis ut, condimentum pretium ante. Vestibulum sit
+                    amet nibh ac leo lobortis eleifend sed nec quam. Curabitur
+                    in pharetra nibh. Nulla vel urna in ante pharetra consequat
+                    at nec lorem. Aliquam et sollicitudin elit. Donec egestas
+                    sem diam, nec viverra leo molestie et. Cras massa orci,
+                    interdum a hendrerit at, eleifend eu libero.
+                  </p>
+                </section>
               </div>
               <div class="card-footer">
                 <button class="card-button" onclick="flipCard()">BACK</button>
