--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     />
     <link href="css/globals.css" rel="stylesheet" />
     <link href="css/helpers.css" rel="stylesheet" />
+    <link href="css/elements.css" rel="stylesheet" />
     <link href="css/card.css" rel="stylesheet" />
     <script type="text/javascript" src="js/actions.js"></script>
   </head>
@@ -20,93 +21,100 @@
     <div class="container">
       <div id="card" class="card">
         <div id="card-inner" class="card-inner">
-          <!-- <div class="card-front new-marker flex">
+          <div class="card-front new-marker flex">
             <div class="card-image">
               <img src="img/card_image.png" width="255" height="210" />
             </div>
             <div class="card-container">
               <div class="card-header">
-                <h3>BetBright Casino</h3>
-                <h1>£1000 Bonus</h1>
+                <h3 class="text-ellipsis">BetBright Casino</h3>
+                <h1 class="text-ellipsis">£1000 Bonus</h1>
               </div>
               <div class="card-content">
                 <section>
-                  <h1>Join</h1>
-                  <p>Open an account with us, it takes just a few minutes</p>
+                  <h1 class="text-ellipsis">Join</h1>
+                  <p class="text-ellipsis">
+                    Open an account with us, it takes just a few minutes
+                  </p>
                 </section>
                 <section>
-                  <h1>Deposit</h1>
-                  <p>
+                  <h1 class="text-ellipsis">Deposit</h1>
+                  <p class="text-ellipsis">
                     Place a single bet up to £30 on any sport in our Sportsbook
                   </p>
                 </section>
               </div>
               <div class="card-footer">
-                <button class="card-button full" onclick="flipCard()">
+                <button class="button full" onclick="flipCard()">
                   Ts&Cs
                 </button>
-                <button class="card-button full">FIND OUT MORE</button>
-                <button class="card-button full primary">JOIN NOW</button>
+                <button class="button full">FIND OUT MORE</button>
+                <button class="button full primary">JOIN NOW</button>
               </div>
             </div>
-          </div> -->
+          </div>
 
-          <div class="card-front flex">
+          <div class="card-back flex">
             <div class="card-container">
               <div class="card-header">
-                <h2>Casino Bonus</h2>
+                <h2 class="text-ellipsis">Casino Bonus</h2>
               </div>
               <div class="card-content scrollable">
-                <section>
-                  <h1>Terms & Conditions</h1>
-                  <p>
-                    Offer only available to new customers who come through
-                    related online promotional material. 18s+. Place a bet up to
-                    the value of what you deposit and up to a max value of £30.
-                    Only first placed bet qualifies. Single and Multiple bets
-                    qualify. If qualifying bet loses, the amount staked up to
-                    max £30 will be refunded. Qualifying bet must be placed
-                    within 14 days of requesting the money back special and bet
-                    must settle within 21 days of being placed.
-                  </p>
-                  <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                    Fusce consectetur est in odio varius, sed tincidunt odio
-                    euismod. Proin a risus scelerisque, interdum lorem ut,
-                    blandit neque. Donec facilisis a odio nec ornare. Maecenas
-                    sit amet diam est. Suspendisse vel magna ac metus malesuada
-                    auctor ut ut nunc. Morbi lobortis dapibus dui, nec
-                    ullamcorper velit accumsan eget. Phasellus ut neque orci.
-                  </p>
-                  <p>
-                    Vivamus tincidunt et ex sed tempor. Integer ac ante sodales,
-                    dictum mi ac, aliquet leo. Integer viverra est blandit
-                    dapibus congue. Pellentesque semper interdum tellus vitae
-                    consequat. Ut scelerisque, eros nec mollis sagittis, magna
-                    neque bibendum elit, eu mollis sem est sit amet urna.
-                    Suspendisse vestibulum eu dolor sed suscipit. Aenean euismod
-                    enim sit amet felis vulputate blandit. Maecenas auctor, nisl
-                    in fermentum suscipit, ligula risus laoreet risus, eget
-                    ultrices urna mauris in urna. In feugiat efficitur mi ac
-                    faucibus. Nam tristique tellus orci. Fusce ut luctus lacus,
-                    at facilisis sapien. Aliquam erat volutpat.
-                  </p>
-                  <p>
-                    Integer laoreet turpis ut odio placerat blandit. Donec et
-                    accumsan magna, ac laoreet urna. Lorem ipsum dolor sit amet,
-                    consectetur adipiscing elit. Nullam mi lorem, condimentum
-                    suscipit turpis ut, condimentum pretium ante. Vestibulum sit
-                    amet nibh ac leo lobortis eleifend sed nec quam. Curabitur
-                    in pharetra nibh. Nulla vel urna in ante pharetra consequat
-                    at nec lorem. Aliquam et sollicitudin elit. Donec egestas
-                    sem diam, nec viverra leo molestie et. Cras massa orci,
-                    interdum a hendrerit at, eleifend eu libero.
-                  </p>
-                </section>
+                <div>
+                  <section>
+                    <h1 class="text-ellipsis">Terms & Conditions</h1>
+                    <p class="text-ellipsis">
+                      Offer only available to new customers who come through
+                      related online promotional material. 18s+. Place a bet up
+                      to the value of what you deposit and up to a max value of
+                      £30. Only first placed bet qualifies. Single and Multiple
+                      bets qualify. If qualifying bet loses, the amount staked
+                      up to max £30 will be refunded. Qualifying bet must be
+                      placed within 14 days of requesting the money back special
+                      and bet must settle within 21 days of being placed.
+                    </p>
+                    <p>
+                      Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                      Fusce consectetur est in odio varius, sed tincidunt odio
+                      euismod. Proin a risus scelerisque, interdum lorem ut,
+                      blandit neque. Donec facilisis a odio nec ornare. Maecenas
+                      sit amet diam est. Suspendisse vel magna ac metus
+                      malesuada auctor ut ut nunc. Morbi lobortis dapibus dui,
+                      nec ullamcorper velit accumsan eget. Phasellus ut neque
+                      orci.
+                    </p>
+                    <p>
+                      Vivamus tincidunt et ex sed tempor. Integer ac ante
+                      sodales, dictum mi ac, aliquet leo. Integer viverra est
+                      blandit dapibus congue. Pellentesque semper interdum
+                      tellus vitae consequat. Ut scelerisque, eros nec mollis
+                      sagittis, magna neque bibendum elit, eu mollis sem est sit
+                      amet urna. Suspendisse vestibulum eu dolor sed suscipit.
+                      Aenean euismod enim sit amet felis vulputate blandit.
+                      Maecenas auctor, nisl in fermentum suscipit, ligula risus
+                      laoreet risus, eget ultrices urna mauris in urna. In
+                      feugiat efficitur mi ac faucibus. Nam tristique tellus
+                      orci. Fusce ut luctus lacus, at facilisis sapien. Aliquam
+                      erat volutpat.
+                    </p>
+                    <p>
+                      Integer laoreet turpis ut odio placerat blandit. Donec et
+                      accumsan magna, ac laoreet urna. Lorem ipsum dolor sit
+                      amet, consectetur adipiscing elit. Nullam mi lorem,
+                      condimentum suscipit turpis ut, condimentum pretium ante.
+                      Vestibulum sit amet nibh ac leo lobortis eleifend sed nec
+                      quam. Curabitur in pharetra nibh. Nulla vel urna in ante
+                      pharetra consequat at nec lorem. Aliquam et sollicitudin
+                      elit. Donec egestas sem diam, nec viverra leo molestie et.
+                      Cras massa orci, interdum a hendrerit at, eleifend eu
+                      libero.
+                    </p>
+                  </section>
+                </div>
               </div>
               <div class="card-footer">
-                <button class="card-button" onclick="flipCard()">BACK</button>
-                <button class="card-button highlighted primary">
+                <button class="button" onclick="flipCard()">BACK</button>
+                <button class="button highlighted primary">
                   JOIN NOW
                 </button>
               </div>
