Corrigido agrupamento de botoes quando a resoluçao estiver abaixo de 600px de largura. Aplicada tag semantica de figure a imagem do card

--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
       <div id="card" class="card">
         <div id="card-inner" class="card-inner">
           <div class="card-front new-marker flex">
-            <div class="card-image">
+            <figure>
               <img src="img/card_image.png" width="255" height="210" />
-            </div>
+            </figure>
             <div class="card-container">
               <div class="card-header">
                 <h3 class="text-ellipsis">BetBright Casino</h3>
@@ -45,10 +45,12 @@
                 </section>
               </div>
               <div class="card-footer">
-                <button class="button full" onclick="flipCard()">
-                  Ts&Cs
-                </button>
-                <button class="button full">FIND OUT MORE</button>
+                <div class="button-group full-2">
+                  <button class="button full" onclick="flipCard()">
+                    Ts&Cs</button
+                  >
+                  <button class="button full">FIND OUT MORE</button>
+                </div>
                 <button class="button full primary">JOIN NOW</button>
               </div>
             </div>
