Corrigido layout do grupo de botoes

--- a/index.html
+++ b/index.html
@@ -47,11 +47,13 @@
               <div class="card-footer">
                 <div class="button-group full-2">
                   <button class="button full" onclick="flipCard()">
-                    Ts&Cs</button
-                  >
+                    Ts&Cs
+                  </button>
                   <button class="button full">FIND OUT MORE</button>
                 </div>
-                <button class="button full primary">JOIN NOW</button>
+                <div class="button-group full">
+                  <button class="button full primary">JOIN NOW</button>
+                </div>
               </div>
             </div>
           </div>
