Adicionado icone de flip para os botoes

--- a/index.html
+++ b/index.html
@@ -46,13 +46,13 @@
               </div>
               <div class="card-footer">
                 <div class="button-group full-2">
-                  <button class="button full" onclick="flipCard()">
+                  <button class="button icon-flip" onclick="flipCard()">
                     Ts&Cs
                   </button>
-                  <button class="button full">FIND OUT MORE</button>
+                  <button class="button">FIND OUT MORE</button>
                 </div>
                 <div class="button-group full">
-                  <button class="button full primary">JOIN NOW</button>
+                  <button class="button primary">JOIN NOW</button>
                 </div>
               </div>
             </div>
@@ -117,10 +117,10 @@
                 </div>
               </div>
               <div class="card-footer">
-                <button class="button" onclick="flipCard()">BACK</button>
-                <button class="button highlighted primary">
-                  JOIN NOW
-                </button>
+                <div class="button-group half-full">
+                  <button class="button half-full icon-flip" onclick="flipCard()">BACK</button>
+                  <button class="button primary">JOIN NOW</button>
+                </div>
               </div>
             </div>
           </div>
