--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"
       rel="stylesheet"
     />
-    <link href="css/globals.css" rel="stylesheet" />
+    <link href="css/base.css" rel="stylesheet" />
     <link href="css/helpers.css" rel="stylesheet" />
     <link href="css/elements.css" rel="stylesheet" />
     <link href="css/card.css" rel="stylesheet" />
@@ -46,13 +46,13 @@
               </div>
               <div class="card-footer">
                 <div class="button-group full-2">
-                  <button class="button icon-flip" onclick="flipCard()">
+                  <button class="button icon-flip text-ellipsis" onclick="flipCard()">
                     Ts&Cs
                   </button>
-                  <button class="button">FIND OUT MORE</button>
+                  <button class="button text-ellipsis">FIND OUT MORE</button>
                 </div>
                 <div class="button-group full">
-                  <button class="button primary">JOIN NOW</button>
+                  <button class="button primary text-ellipsis">JOIN NOW</button>
                 </div>
               </div>
             </div>
@@ -118,8 +118,8 @@
               </div>
               <div class="card-footer">
                 <div class="button-group half-full">
-                  <button class="button half-full icon-flip" onclick="flipCard()">BACK</button>
-                  <button class="button primary">JOIN NOW</button>
+                  <button class="button half-full icon-flip text-ellipsis" onclick="flipCard()">BACK</button>
+                  <button class="button primary text-ellipsis">JOIN NOW</button>
                 </div>
               </div>
             </div>
