--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="description" content="888 Spectate Frontend Test" />
+    <meta name="description" content="Flip Card" />
     <meta name="author" content="Caio Rios" />
-    <title>888 Spectate - Flip Card</title>
+    <title>Flip Card</title>
     <link
       href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"
       rel="stylesheet"
@@ -19,8 +19,8 @@
   </head>
   <body>
     <div class="container">
-      <div id="card" class="card">
-        <div id="card-inner" class="card-inner">
+      <div class="card">
+        <div class="card-inner">
           <div class="card-front new-marker flex">
             <figure>
               <img src="img/card_image.png" width="255" height="210" />
@@ -46,7 +46,10 @@
               </div>
               <div class="card-footer">
                 <div class="button-group full-2">
-                  <button class="button icon-flip text-ellipsis" onclick="flipCard()">
+                  <button
+                    class="button icon-flip text-ellipsis"
+                    onclick="flipCard()"
+                  >
                     Ts&Cs
                   </button>
                   <button class="button text-ellipsis">FIND OUT MORE</button>
@@ -118,7 +121,12 @@
               </div>
               <div class="card-footer">
                 <div class="button-group half-full">
-                  <button class="button half-full icon-flip text-ellipsis" onclick="flipCard()">BACK</button>
+                  <button
+                    class="button half-full icon-flip text-ellipsis"
+                    onclick="unflipCard()"
+                  >
+                    BACK
+                  </button>
                   <button class="button primary text-ellipsis">JOIN NOW</button>
                 </div>
               </div>
