Retirado codigos nao utilizados. Corrigido transparencia no Safari

--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                 <div class="button-group half-full">
                   <button
                     class="button half-full icon-flip text-ellipsis"
-                    onclick="unflipCard()"
+                    onclick="flipCard()"
                   >
                     BACK
                   </button>
